@@ -1,4 +1,0 @@
-<!entity objectbasecont.sgml system "objectbasecont.sgml">
-<!entity objectbasemeta.sgml system "objectbasemeta.sgml">
-<!entity objectbase00.sgml system "objectbase00.sgml">
-<!entity objectbasepages.sgml system "objectbasepages.sgml">
