@@ -1,0 +1,4 @@
+<!entity objectbasecont.sgml system "@srcdir@/objectbasecont.sgml">
+<!entity objectbasemeta.sgml system "@srcdir@/objectbasemeta.sgml">
+<!entity objectbase00.sgml system "@srcdir@/objectbase00.sgml">
+<!entity objectbasepages.sgml system "objectbasepages.sgml">
