@@ -1,3 +1,11 @@
+1998-05-23  Marcus G. Daniels  <mgd@ute.santafe.edu>
+
+	* Makefile.am: New file.
+
+	* objectbase.ent.in: New file.
+
+	* objecbase.ent: Removed.
+
 1998-05-22  Marcus G. Daniels  <mgd@ute.santafe.edu>
 
 	* Begin revision log.
